[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scenes/screens/scripts/LevelSelectScreen.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/ui/themes/BodyTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/ui/themes/H2_Theme.tres" type="Theme" id=3]
[ext_resource path="res://src/scenes/ui/LevelSelectionButton.tscn" type="PackedScene" id=4]

[node name="LevelSelectScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 200.0
color = Color( 0.101961, 0.176471, 0.309804, 1 )

[node name="TitleHBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.2
margin_top = -9.53674e-07
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleHBoxContainer"]
margin_left = 88.0
margin_top = 5.0
margin_right = 232.0
margin_bottom = 27.0
theme = ExtResource( 3 )
text = "Level Select"

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.025
anchor_top = 0.2
anchor_right = 0.975
anchor_bottom = 0.84
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab1" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 27.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Tab1"]
anchor_left = 0.108
anchor_top = 0.052
anchor_right = 0.889
anchor_bottom = 1.041
margin_left = 0.0319996
margin_top = -0.0440001
margin_right = -0.144012
margin_bottom = 0.0230026
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectionButton1" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_right = 43.0
margin_bottom = 41.0
_level_number = 1

[node name="LevelSelectionButton2" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 47.0
margin_right = 90.0
margin_bottom = 41.0
_level_number = 2

[node name="LevelSelectionButton3" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 94.0
margin_right = 137.0
margin_bottom = 41.0
_level_number = 3

[node name="LevelSelectionButton4" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 141.0
margin_right = 184.0
margin_bottom = 41.0
_level_number = 4

[node name="LevelSelectionButton5" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 188.0
margin_right = 231.0
margin_bottom = 41.0
_level_number = 5

[node name="LevelSelectionButton6" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_top = 45.0
margin_right = 43.0
margin_bottom = 86.0
_level_number = 6

[node name="LevelSelectionButton7" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 45.0
margin_right = 90.0
margin_bottom = 86.0
_level_number = 7

[node name="LevelSelectionButton8" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 94.0
margin_top = 45.0
margin_right = 137.0
margin_bottom = 86.0
_level_number = 8

[node name="LevelSelectionButton9" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 141.0
margin_top = 45.0
margin_right = 184.0
margin_bottom = 86.0
_level_number = 9

[node name="LevelSelectionButton10" parent="TabContainer/Tab1/GridContainer" instance=ExtResource( 4 )]
margin_left = 188.0
margin_top = 45.0
margin_right = 231.0
margin_bottom = 86.0
_level_number = 10

[node name="Tab2" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 27.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer2" type="GridContainer" parent="TabContainer/Tab2"]
margin_left = 32.0
margin_top = 5.0
margin_right = 263.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectionButton11" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_right = 43.0
margin_bottom = 41.0
_level_number = 11

[node name="LevelSelectionButton12" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 47.0
margin_right = 90.0
margin_bottom = 41.0
_level_number = 12

[node name="LevelSelectionButton13" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 94.0
margin_right = 137.0
margin_bottom = 41.0
_level_number = 13

[node name="LevelSelectionButton14" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 141.0
margin_right = 184.0
margin_bottom = 41.0
_level_number = 14

[node name="LevelSelectionButton15" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 188.0
margin_right = 231.0
margin_bottom = 41.0
_level_number = 15

[node name="LevelSelectionButton16" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_top = 45.0
margin_right = 43.0
margin_bottom = 86.0
_level_number = 16

[node name="LevelSelectionButton17" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 47.0
margin_top = 45.0
margin_right = 90.0
margin_bottom = 86.0
_level_number = 17

[node name="LevelSelectionButton18" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 94.0
margin_top = 45.0
margin_right = 137.0
margin_bottom = 86.0
_level_number = 18

[node name="LevelSelectionButton19" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 141.0
margin_top = 45.0
margin_right = 184.0
margin_bottom = 86.0
_level_number = 19

[node name="LevelSelectionButton20" parent="TabContainer/Tab2/GridContainer2" instance=ExtResource( 4 )]
margin_left = 141.0
margin_top = 45.0
margin_right = 184.0
margin_bottom = 86.0
_level_number = 20

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 176.0
margin_right = -32.0
margin_bottom = -8.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuBtn" type="Button" parent="ButtonHBoxContainer"]
margin_left = 99.0
margin_right = 157.0
margin_bottom = 16.0
text = "Main Menu"
